<resources>
    <string name="app_name">Sample Constraint Layout</string>
    <string name="exercise">Exercise 1</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">Login</string>
    <string name="tData">Data Anda</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="detailkontak">Detail</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="namaitem">Item</string>
    <string name="Regis">Belum Terdaftar?</string>
    <string name="Pendaftaran">Pendaftaran</string>
    <string name="jKelamin">Jenis Kelamin</string>
    <string name="laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="islam">Islam</string>
    <string name="kristen">Kristen</string>
    <string name="katolik">Katolik</string>
    <string name="hindu">Hindu</string>
    <string name="buddha">Buddha</string>
    <string name="konghucu">Konghucu</string>
    <string name="pKepercayaan">Penganut Kepercayaan</string>
</resources>
